--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,217 @@
+body {
+    font-family: 'Nunito Sans', sans-serif;
+    color: #24356D;
+  }
+
+.btn {
+    border-radius:.125rem;
+}
+.btn-outline-secondary{
+    color:#24356D;
+    border-color:#24356D;
+}
+
+.btn-outline-secondary:hover{
+    color:#3080E8;
+    border-color:#3080E8;
+    background-color:#fff;
+}
+
 .product-hero-image{
     position:absolute;
     top:0;
     right:0;
+}
+
+.light-blue-bg{
+    background-color:#F4F9FE;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #24356D;
+}
+
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+    color:#3080E8;
+}
+
+.navbar{
+    background-color:#fff;
+    box-shadow: 0px 4px 12px 0px rgba(48, 128, 232, 0.15);
+
+}
+
+.bg-effect {
+    background: url(/images/background-image.svg) no-repeat;
+    background-size: cover;
+    position:absolute;
+}
+.layer-1 {   
+    background-position: top right;
+    top:0;
+    right:0;
+    height: 1500px;
+    width: 100%;
+}
+
+.layer-2 {   
+    background-position: top right;
+    top: 40%;
+    right: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #f2f7fc;
+    z-index: -1;
+}
+
+.layer-3 {   
+    background-position: top right;
+    right: 0;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background-color: #f2f7fc;
+    z-index: -1;
+}
+
+.layer-4 {   
+    background-position: top right;
+    left: 0;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background-color: #f2f7fc;
+    z-index: -1;
+}
+
+
+
+.product-card-deck .card-title{
+    font-size:3rem;
+    font-weight:100;
+}
+
+.product-card-deck .card-footer{
+    background-color:transparent;
+    border:none;
+}
+
+.product-card-deck .card {
+    border:none;
+    box-shadow: 0 8px 16px 0px rgba(48, 128, 232, 0.15);
+}
+
+.product-card-deck .card-footer .card-link, .instant-news .card-link{
+    font-weight: 800;
+}
+
+.product-card-deck .card-footer .card-link:after, .instant-news .card-link:after{
+    content: '';
+    width: 18px;
+    height: 18px;
+    background-image: url(/images/arrow-icon.svg);
+    vertical-align: middle;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin-left: 8px;
+}
+
+.instant-news .card-text {
+    font-size:1.25rem;
+
+}
+
+
+.font-weight-light{
+    font-weight:100 !important;
+}
+
+.green-bg{
+    background-color:#16C79E;
+}
+
+.footer .links a {
+    color:#505660;
+    text-decoration: none;
+}
+.footer .links a:hover {
+    color:#3080E8;
+}
+
+.footer .links li {
+    margin-bottom: 0.5rem;
+}
+
+.footer .links li a img{
+    margin-right: 0.25rem;
+}
+
+.footer-bottom-image{
+    background-image: url(/images/footer-decoration.png);
+    background-position: center;
+    bottom: calc(100% - 420px);
+    height: 300px;
+    width: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 0;
+    z-index: -1;
+    opacity:0.1;
+}
+
+.footer-top-image{
+    background-image: url(/images/footer-decoration.png);
+    background-position: right;
+    top: -170px;
+    height: 300px;
+    width: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: contain;
+    padding: 0;
+    z-index: -1;
+    opacity:0.2;
+}
+
+.get-right{
+    top: 0;
+    right: -100px;
+}
+
+.rollover-card{
+    box-shadow: 0px 24px 48px 0px rgba(48, 128, 232, 0.20);
+    background-color:#fff;
+}
+
+.advanced-features .card {
+    box-shadow: 0px 8px 16px 0px rgba(48, 128, 232, .15);
+    border:none;
+    min-height: 235px;
+}
+.advanced-features .card .card-title{
+    font-weight: 800;
+}
+
+.aiclass-background {
+    background: url(/images/background-image-aiclass.svg) no-repeat;
+    background-size: cover;
+    position: absolute;
+    background-position: top left;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+
+.light-gradient-background-toptobottom{
+    background:linear-gradient(180deg, rgba(244,249,254,1) 3%, rgba(255,255,255,1) 100%)
+}
+
+.light-gradient-background-bottomtotop{
+    background:linear-gradient(0deg, rgba(244,249,254,1) 3%, rgba(255,255,255,1) 100%)
 }
