--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,26 @@ body {
 .light-gradient-background-bottomtotop{
     background:linear-gradient(0deg, rgba(244,249,254,1) 3%, rgba(255,255,255,1) 100%)
 }
+
+.shadow-disable{
+    box-shadow:none;
+}
+
+.form-control-lg{
+    border-radius: .125rem;
+    font-size: 1rem;
+    height: calc(3rem + 2px);
+    padding: 2rem 0rem 2rem 1rem;
+}
+
+/* Cloud animation*/
+
+
+
+.clouds-wrapper {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 10%;
+}
+
